--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-aiogram==3.0.0b7
+aiogram==3.13.0
 python-dotenv==1.0.0
-aiohttp==3.9.0 
-sqlalchemy==2.0.0
-aiosqlite==0.19.0
+aiohttp==3.9.5
+sqlalchemy==2.0.29
+aiosqlite==0.20.0
